# Rick_Morty_Api

./: .gitignore  pyproject.toml
src/project/: main.py
src/project/Controller/: PersonagemController.py
src/project/Database/: config.py
src/project/Entities/: Personagem.py
src/project/Repository/: PersonagemRepository.py
src/project/Services/: PersonagemService.py
src/project/classes/: Request.py
